<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title" translatable="false">Playlist Maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="playlist_name" translatable="false">Название*</string>
    <string name="playlist_description" translatable="false">Описание</string>
    <string name="settings_dark_theme"  translatable="false" >Темная тема</string>
    <string name="settings_share_app"  translatable="false" >Поделиться приложением</string>
    <string name="settings_support"  translatable="false" >Написать в поддержку</string>
    <string name="settings_agreement"  translatable="false" >Пользовательское соглашение</string>
    <string name="share_text"   translatable="false" >https://practicum.yandex.ru/android-developer/</string>
    <string name="chooser_text" translatable="false">Отправить с помощью</string>
    <string name="support_email" translatable="false">anohov2012@yandex.ru</string>
    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint" translatable="false">Поиск</string>
    <string name="connect_problem_title" translatable="false">Проблемы со связью</string>
    <string name="search_history_title" translatable="false">Вы искали</string>
    <string name="connect_problem_message" translatable="false">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="not_found" translatable="false">Ничего не нашлось</string>
    <string name="error" translatable="false">Что-то пошло не так</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="historyRefresh" translatable="false">Очистить историю</string>
    <string name="duration" translatable="false">Длительность</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="year" translatable="false">Год</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="country" translatable="false">Страна</string>
    <string name="_00_00"  translatable="false" >00:00</string>
    <string name="empty_favorites" translatable="false">Ваша медиатека пуста</string>
    <string name="empty_playlist" translatable="false">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="create" translatable="false">Создать</string>
    <string name="fav_tabs" translatable="false">Избранные треки</string>
    <string name="playlist_tabs" translatable="false">Плейлисты</string>
    <string name="dialog_medialib_title" translatable="false">Сохранить изменения?</string>
    <string name="dialog_medialib_message" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="dialog_medialib_neutral" translatable="false">Отмена</string>
    <string name="dialog_medialib_positive" translatable="false">Завершить</string>
    <string name="add_to_playlist" translatable="false">Добавить в плейлист</string>
    <string name="delete_track_message"  translatable="false" >Хотите удалить трек?</string>
    <string name="delete_playlist_message"  translatable="false" >Хотите удалить плейлист «%s»?</string>
    <string name="yes"  translatable="false">ДА</string>
    <string name="no"  translatable="false" >НЕТ</string>
    <string name="share"  translatable="false" >Поделиться</string>
    <string name="edit_title"  translatable="false" >Редактировать</string>
    <string name="save"  translatable="false" >Сохранить</string>
    <string name="edit"  translatable="false" >Редактировать информацию</string>
    <string name="delete_playlist"  translatable="false" >Удалить плейлист</string>
    <string name="empty_playlist_share" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>
</resources>