<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:navigationIcon="@drawable/arrow_back"
        app:titleTextAppearance="@style/ToolbarSettingsText"
        android:id="@+id/back_toolbar"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_dark_theme"
        android:textSize="@dimen/activity_settings_text_size"
        android:layout_marginTop="@dimen/margin_from_toolbar"
        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
        android:paddingVertical="@dimen/setting_padding_vertical"
        android:gravity="center_vertical"
        android:checked="true"
        />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/sharing"
        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
        android:paddingVertical="@dimen/setting_padding_vertical"
        android:text="@string/settings_share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_settings_text_size" />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
        android:paddingVertical="@dimen/setting_padding_vertical"
        android:text="@string/settings_support"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_settings_text_size" />
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_forward"
        android:layout_marginHorizontal="@dimen/main_margin_horizontal"
        android:paddingVertical="@dimen/setting_padding_vertical"
        android:text="@string/settings_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/activity_settings_text_size" />

</LinearLayout>