<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/playlistMain"
    tools:context=".player.ui.PlayerFragment"
    >
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/arrow_back"
            style="@style/ToolbarMainText"
            android:id="@+id/back_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.065" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.935" />
        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/back_toolbar"
            android:src="@drawable/placeholder"
             />
        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            style="@style/PlaylistText"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="Yesterday (Remastered 2009)"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            />
        <TextView
            android:id="@+id/trackArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="textStart"
            style="@style/PlaylistText.Size14"
            app:layout_constraintTop_toBottomOf="@id/trackTitle"
            tools:text="The Beatles"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            />

        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:src="@drawable/add_button1"
            android:background="@null"

            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/playButton"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:layout_constraintBottom_toBottomOf="@id/playButton"/>
        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/play_button"
            android:background="@null"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@id/addButton"
            app:layout_constraintEnd_toStartOf="@id/likeButton"
            app:layout_constraintTop_toBottomOf="@id/trackArtist"
            />
        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:src="@drawable/unactive_like"
            android:background="@null"
            app:layout_constraintStart_toEndOf="@id/playButton"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/playButton"
            app:layout_constraintBottom_toBottomOf="@id/playButton"/>

        <TextView
            android:id="@+id/trackTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            style="@style/PlaylistText.Size16"
            app:layout_constraintTop_toBottomOf="@id/playButton"
            android:text="@string/_00_00"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            />
        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/PlaylistText.Size12.Padding.ColorGrey"
            app:layout_constraintTop_toBottomOf="@id/trackTime"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            android:text="@string/duration"
            />
        <TextView
            android:id="@+id/durationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            style="@style/PlaylistText.Size12.Padding"
            app:layout_constraintTop_toBottomOf="@id/trackTime"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            tools:text="5:35"
            android:layout_alignBaseline="@id/duration"
            />
        <TextView
            android:id="@+id/album"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            style="@style/PlaylistText.Size12.Padding.ColorGrey"
            app:layout_constraintTop_toBottomOf="@id/duration"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            android:text="@string/album"
            />
        <TextView
            android:id="@+id/albumValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            style="@style/PlaylistText.Size12.Padding"
            app:layout_constraintTop_toBottomOf="@id/duration"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            tools:text="Yesterday (Remastered 2009)"
            android:layout_alignBaseline="@id/album"
            />

        <TextView
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            style="@style/PlaylistText.Size12.Padding.ColorGrey"
            app:layout_constraintTop_toBottomOf="@id/album"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            android:text="@string/year"
            />
        <TextView
            android:id="@+id/yearValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            style="@style/PlaylistText.Size12.Padding"
            app:layout_constraintTop_toBottomOf="@id/album"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            android:layout_alignBaseline="@id/year"
            tools:text="1965"
            />
        <TextView
            android:id="@+id/genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            style="@style/PlaylistText.Size12.Padding.ColorGrey"
            app:layout_constraintTop_toBottomOf="@id/year"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            android:text="@string/genre"
            />
        <TextView
            android:id="@+id/genreValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            style="@style/PlaylistText.Size12.Padding"
            app:layout_constraintTop_toBottomOf="@id/year"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            android:layout_alignBaseline="@id/genre"
            tools:text="Rock"
            />

        <TextView
            android:id="@+id/country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            style="@style/PlaylistText.Size12.Padding.ColorGrey"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            android:text="@string/country"
            />
        <TextView
            android:id="@+id/countryValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            style="@style/PlaylistText.Size12.Padding"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            android:layout_alignBaseline="@id/country"
            tools:text="Великобритания"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="500dp"
        android:background="@drawable/playlist_tracks"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounder" />
        <TextView
            android:id="@+id/add_to_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/add_to_playlist"
            android:textColor="?attr/black_white"
            android:textSize="20sp"
            android:fontFamily="@font/ys_display_medium" />

        <Button
            android:id="@+id/newPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            style="@style/NewPlaylist"
            android:text="@string/new_playlist"
            android:textAllCaps="false"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/songItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            tools:listitem="@layout/playlist_item_horisontal" />

        <ImageView
            android:id="@+id/fail_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:src="@drawable/not_found"
            android:visibility="gone" />

        <TextView
            android:id="@+id/placeholderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            style="@style/EmptyPlaceholder"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="@string/empty_favorites"
           />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>