<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".medialibrary.ui.fragment.CreatePlaylistFragment"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back"
        style="@style/ToolbarMainText"
        android:id="@+id/back_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/new_playlist"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.065" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.935" />
    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"

        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/back_toolbar"
        app:srcCompat="@drawable/new_paylist_list" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/playlist_name"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxCornerRadiusBottomEnd="2dp"
        app:boxCornerRadiusBottomStart="2dp"
        app:boxCornerRadiusTopEnd="2dp"
        app:boxCornerRadiusTopStart="2dp"
        android:textColorHint="?attr/black_white"
        app:hintTextAppearance="@style/PlaylistInputHint"
        app:boxStrokeColor="@color/playlist_input_color"
        app:hintTextColor="@color/playlist_input_color"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/image">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/PlaylistInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColor="?attr/black_white"
            android:textColorHint="?attr/black_white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/playlist_description"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxCornerRadiusBottomEnd="2dp"
        app:boxCornerRadiusBottomStart="2dp"
        app:boxCornerRadiusTopEnd="2dp"
        app:boxCornerRadiusTopStart="2dp"
        android:textColorHint="?attr/black_white"
        app:hintTextAppearance="@style/PlaylistInputHint"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/playlist_input_color"
        app:hintTextColor="@color/playlist_input_color"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/name"

        >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/PlaylistInputText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColor="?attr/black_white"
         />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newPlaylist"
        style="@style/CreatePlaylistButton"
        android:layout_width="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"  />
</androidx.constraintlayout.widget.ConstraintLayout>